--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  config: path.resolve('src/database/config.js'),
-  migrationsPath: path.resolve('src/database/migrations'),
-  modelsPath: path.resolve('src/database/models'),
-  seedersPath: path.resolve('src/database/seeders'),
+  config: path.resolve('database/config.js'),
+  migrationsPath: path.resolve('database/migrations'),
+  modelsPath: path.resolve('database/models'),
+  seedersPath: path.resolve('database/seeders'),
 };
